added serializers, yandex cloud, avatars for users
