# swagger/v1/swagger.yaml
@@ -155,31 +155,6 @@ paths:
                 example_1:
                   value:
                     message: Something went wrong, please try again
-    patch:
-      summary: Update user
-      tags:
-      - Users
-      parameters: []
-      responses:
-        '200':
-          description: Found
-          content:
-            application/json:
-              schema:
-                type: object
-                "$ref": "#/components/schemas/user"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                profile:
-                  "$ref": "#/components/schemas/profile_data_user"
-              required:
-              - first_name
-              - last_name
-              - age
   "/api/v1/users/:id/confirm_account":
     get:
       summary: Confirm account
@@ -208,6 +183,35 @@ paths:
                 example_1:
                   value:
                     message: Something went wrong, please try again
+  "/api/v1/users/{id}":
+    patch:
+      summary: Update user
+      tags:
+      - Users
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Found
+          content:
+            application/json:
+              schema:
+                type: object
+                "$ref": "#/components/schemas/user"
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              "$ref": "#/components/schemas/profile_data_user"
+              encoding:
+                avatar:
+                  contentType:
+                  - image/png
+                  - image/jpeg
 servers:
 - url: http://{defaultHost}
   variables:
@@ -272,10 +276,8 @@ components:
           type: string
         age:
           type: integer
-      required:
-      - first_name
-      - last_name
-      - age
+        avatar:
+          type: file
     user:
       type: object
       properties:
@@ -290,12 +292,8 @@ components:
           type: string
         age:
           type: integer
-        created_at:
+        avatar:
           type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
       required:
       - id
       - email
